--- a/app/src/main/res/layout/fragment_ambience_otherrooms.xml
+++ b/app/src/main/res/layout/fragment_ambience_otherrooms.xml
@@ -26,9 +26,9 @@
                     android:id="@+id/txtLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Location: "
+                    android:text="@string/ambience_location"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.01"
@@ -40,7 +40,7 @@
                     android:id="@+id/frameSpinnerBuilding"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:background="@drawable/custom_spn_background"
                     app:layout_constraintBottom_toBottomOf="@+id/txtLocation"
                     app:layout_constraintStart_toEndOf="@+id/txtLocation"
@@ -59,7 +59,7 @@
                     android:id="@+id/frameSpinnerRooms"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:background="@drawable/custom_spn_background"
                     app:layout_constraintBottom_toBottomOf="@+id/frameSpinnerBuilding"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -95,9 +95,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="MEASUREMENT"
+                    android:text="@string/ambience_measurement"
                     android:textColor="@color/green_primary"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -107,9 +107,9 @@
                     android:id="@+id/txtValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="VALUE"
+                    android:text="@string/ambience_value"
                     android:textColor="@color/green_primary"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtMeasurement"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/txtMeasurement"
@@ -120,9 +120,9 @@
                     android:layout_width="138dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
-                    android:text="Temperature (C): "
+                    android:text="@string/ambience_value"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -142,10 +142,10 @@
                     android:id="@+id/txtPressure"
                     android:layout_width="138dp"
                     android:layout_height="wrap_content"
-                    android:text="Pressure (hPa): "
+                    android:text="@string/ambience_pressure"
                     android:textColor="@color/grey_80"
                     android:layout_marginTop="46dp"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -165,10 +165,10 @@
                     android:id="@+id/txtMoisture"
                     android:layout_width="138dp"
                     android:layout_height="wrap_content"
-                    android:text="Moisture (%): "
+                    android:text="@string/ambience_moisture"
                     android:textColor="@color/grey_80"
                     android:layout_marginTop="47dp"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -197,9 +197,9 @@
                     android:id="@+id/txtAirQuality"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="AIR QUALITY"
+                    android:text="@string/ambience_airquality"
                     android:textColor="@color/green_primary"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -209,9 +209,9 @@
                     android:id="@+id/txtAirPercentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="(%)"
+                    android:text="@string/percentage"
                     android:textColor="@color/grey_60"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtAirQuality"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.020"
@@ -234,9 +234,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Description"
+                    android:text="@string/description"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -258,9 +258,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Looking at the overall quality of air in this room, it looks like you need some fresh air."
+                    android:text="@string/ambience_airquality_placeholder"
                     android:textColor="@color/grey_80"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider2" />
@@ -279,9 +279,9 @@
                     android:id="@+id/txtWindowPosition"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="WINDOW POSITION"
+                    android:text="@string/ambience_window"
                     android:textColor="@color/green_primary"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -302,9 +302,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Description"
+                    android:text="@string/description"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -326,9 +326,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="-"
+                    android:text="@string/placeholder"
                     android:textColor="@color/grey_80"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider3" />
