--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,9 +24,9 @@
                     android:id="@+id/txtStats"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="YOUR STATS"
+                    android:text="@string/home_stats"
                     android:textColor="@color/red_primary"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +37,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="Course: "
+                    android:text="@string/home_course"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -49,9 +49,10 @@
                     android:id="@+id/txtCourseValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="-"
+                    android:text="@string/placeholder"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
+                    android:layout_marginStart="5dp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtCourseTitle"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -64,9 +65,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="Year: "
+                    android:text="@string/home_year"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -76,9 +77,10 @@
                     android:id="@+id/txtYearValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="-"
+                    android:text="@string/placeholder"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
+                    android:layout_marginStart="5dp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtYearTitle"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -91,9 +93,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="Semester: "
+                    android:text="@string/home_semester"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -103,9 +105,10 @@
                     android:id="@+id/txtSemesterValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="-"
+                    android:text="@string/placeholder"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
+                    android:layout_marginStart="5dp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtSemesterTitle"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -118,9 +121,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="Subjects enrolled: "
+                    android:text="@string/home_subjectsenrolled"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -130,9 +133,10 @@
                     android:id="@+id/txtSubjectsEnrolledValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="-"
+                    android:text="@string/placeholder"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
+                    android:layout_marginStart="5dp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtSubjectsEnrolledTitle"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -145,9 +149,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="SEMESTER COMPLETION"
+                    android:text="@string/home_completion"
                     android:textColor="@color/red_primary"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -157,9 +161,9 @@
                     android:id="@+id/txtSemComplPercentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="(%)"
+                    android:text="@string/percentage"
                     android:textColor="@color/grey_60"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtSemCompletion"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.020"
@@ -183,7 +187,7 @@
                     android:layout_marginTop="20dp"
                     android:text="@string/btDesc"
                     android:textColor="@color/grey_60"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/hBarChart" />
@@ -201,9 +205,9 @@
                     android:id="@+id/txtAvgTardiness"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="YOUR VS AVERAGE TARDINESS"
+                    android:text="@string/home_tardiness"
                     android:textColor="@color/red_primary"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -213,9 +217,9 @@
                     android:id="@+id/txtAvgTardinessPercentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="(%)"
+                    android:text="@string/percentage"
                     android:textColor="@color/grey_60"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtAvgTardiness"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.020"
@@ -236,7 +240,7 @@
                         android:id="@+id/pieChart"
                         android:layout_width="0dp"
                         android:layout_height="200dp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginEnd="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -246,7 +250,7 @@
                         android:id="@+id/pieChart2"
                         android:layout_width="0dp"
                         android:layout_height="200dp"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toEndOf="@id/pieChart"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -277,7 +281,7 @@
                         android:id="@+id/late"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="LATE"
+                        android:text="@string/home_late"
                         android:textSize="15sp"
                         android:textColor="@color/grey_80"
                         />
@@ -286,7 +290,7 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:background="@drawable/rounded_circle_teal"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
 
                         />
 
@@ -294,7 +298,7 @@
                         android:id="@+id/early"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="EARLY"
+                        android:text="@string/home_early"
                         android:textSize="15sp"
                         android:textColor="@color/grey_80"
                         />
@@ -303,14 +307,14 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:background="@drawable/rounded_circle_red"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
                         />
 
                     <TextView
                         android:id="@+id/inTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="IN TIME"
+                        android:text="@string/home_intime"
                         android:textSize="15sp"
                         android:textColor="@color/grey_80"
                         />
