--- a/app/src/main/res/layout/fragment_myclasses_statsgoals.xml
+++ b/app/src/main/res/layout/fragment_myclasses_statsgoals.xml
@@ -24,9 +24,9 @@
                     android:id="@+id/txtMyAvgAtt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="MY VS AVG. PEER ATTENDANCE"
+                    android:text="@string/statsgoals_myvsavg"
                     android:textColor="@color/yellow_primary"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -36,9 +36,9 @@
                     android:id="@+id/txtMyAvgPercentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="(%)"
+                    android:text="@string/percentage"
                     android:textColor="@color/grey_60"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtMyAvgAtt"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.020"
@@ -51,9 +51,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="Subject: "
+                    android:text="@string/statsgoals_subject"
                     android:textColor="@color/grey_80"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -63,8 +63,8 @@
                     android:id="@+id/frameSpinnerSubjects"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@drawable/custom_spn_background"
                     app:layout_constraintBottom_toBottomOf="@+id/txtSubject"
                     app:layout_constraintEnd_toEndOf="parent"
