--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                         android:layout_gravity="end"
                         android:layout_marginEnd="15sp"
                         android:layout_marginTop="15sp"
-                        android:contentDescription="logo"
+                        android:contentDescription="@string/desc_logo"
                         android:src="@drawable/ic_house" />
 
                 </RelativeLayout>
