--- a/app/src/main/res/layout/attendance_details_item.xml
+++ b/app/src/main/res/layout/attendance_details_item.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/txtEventType"
-            android:text="-"
+            android:text="@string/placeholder"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:textColor="@color/grey_80"
@@ -21,7 +21,7 @@
 
         <TextView
             android:id="@+id/txtMyAttend"
-            android:text="-"
+            android:text="@string/placeholder"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:textColor="@color/grey_80"
@@ -30,7 +30,7 @@
 
         <TextView
             android:id="@+id/txtMinAttend"
-            android:text="-"
+            android:text="@string/placeholder"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:textColor="@color/grey_80"
