--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -57,7 +57,7 @@
                 android:lineSpacingExtra="0sp"
                 android:paddingTop="10dp"
                 android:paddingBottom="2dp"
-                android:text="Login"
+                android:text="@string/auth_login"
                 android:textColor="@color/white_acc"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -76,7 +76,7 @@
                 android:focusable="true"
                 android:paddingTop="10dp"
                 android:paddingBottom="2dp"
-                android:text="Register"
+                android:text="@string/auth_register"
                 android:textColor="@color/white_acc"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -107,7 +107,7 @@
                 android:ellipsize="none"
                 android:ems="10"
                 android:fontFamily="sans-serif"
-                android:hint="LDAP e-mail address"
+                android:hint="@string/auth_hint"
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
                 android:textColor="@android:color/black"
@@ -129,7 +129,7 @@
                 android:ellipsize="none"
                 android:ems="10"
                 android:fontFamily="sans-serif"
-                android:hint="Password"
+                android:hint="@string/auth_hintpassword"
                 android:inputType="textPassword"
                 android:paddingStart="10dp"
                 android:textColor="@android:color/black"
@@ -179,7 +179,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/white_acc"
-                android:text="Remember Me"
+                android:text="@string/auth_rememberme"
                 android:textColor="@color/white_acc"
                 android:textColorHighlight="@color/white_acc"
                 android:textColorHint="@color/white_acc"
