--- a/app/src/main/res/layout/fragment_mybehaviours.xml
+++ b/app/src/main/res/layout/fragment_mybehaviours.xml
@@ -38,7 +38,6 @@
                 android:layout_height="175dp"
                 android:layout_marginTop="15dp"
                 android:paddingStart="0dp"
-                android:layout_marginLeft="0dp"
                 android:layout_marginStart="0dp"
                 android:background="@color/white_acc"
 
@@ -55,7 +54,7 @@
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
-                   android:text="Description"
+                   android:text="@string/description"
                    android:layout_marginStart="15dp"
                    android:textSize="17sp"
                    android:textColor="@color/grey_80"
@@ -79,11 +78,11 @@
                    android:id="@+id/tardinessDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
-                   android:textSize="16dp"
+                   android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
-                   android:text="Looking at your class arrival times it has been observed that you tend to arrive to class just in time the academic quarter expires or couple minutes late."
+                   android:text="@string/placeholder"
                     android:textColor="@color/grey_80"
                    />
            </LinearLayout>
@@ -98,7 +97,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="STUDY IMPROVEMENTS"
+                android:text="@string/mybehaviours_studyimprovements"
                 android:textColor="@color/red_primary"
                 android:textSize="20sp"
                 android:layout_marginStart="15dp"/>
@@ -115,7 +114,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description"
+                android:text="@string/description"
                 android:layout_marginStart="15dp"
                 android:textSize="17sp"
                 android:textColor="@color/grey_80"
@@ -138,7 +137,7 @@
                 android:id="@+id/txtMyBehavioursStudyDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
