--- a/app/src/main/res/layout/fragment_myclasses.xml
+++ b/app/src/main/res/layout/fragment_myclasses.xml
@@ -69,7 +69,7 @@
                     android:id="@+id/imageView2"
                     android:layout_width="157dp"
                     android:layout_height="140dp"
-                    android:tint="@color/grey_60"
+                    app:tint="@color/grey_60"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
