--- a/app/src/main/res/layout/fragment_myclasses_attendance.xml
+++ b/app/src/main/res/layout/fragment_myclasses_attendance.xml
@@ -32,9 +32,9 @@
                         android:id="@+id/semesterText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Semester:"
+                        android:text="@string/attendance_semester"
                         android:textColor="@color/grey_80"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -77,9 +77,9 @@
                         android:id="@+id/txtSemNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1"
+                        android:text="@string/attendance_semnum"
                         android:textColor="@color/grey_80"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +109,7 @@
                         android:layout_marginTop="5dp">
 
                         <TextView
-                            android:text="SUBJECT"
+                            android:text="@string/attendance_subject"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:textColor="@color/yellow_primary"
@@ -117,7 +117,7 @@
                             android:layout_weight="3"/>
 
                         <TextView
-                            android:text="MY ATTENDANCE"
+                            android:text="@string/attendance_attendance"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:textColor="@color/yellow_primary"
@@ -169,9 +169,9 @@
                         android:id="@+id/txtSubjectTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="-"
+                        android:text="@string/placeholder"
                         android:textColor="@color/grey_80"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.039"
@@ -203,7 +203,7 @@
                         android:layout_marginTop="5dp">
 
                         <TextView
-                            android:text="CLASS"
+                            android:text="@string/attendance_class"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:textColor="@color/yellow_primary"
@@ -211,7 +211,7 @@
                             android:layout_weight="1.1"/>
 
                         <TextView
-                            android:text="MY ATTEND."
+                            android:text="@string/attendance_myattend"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:textColor="@color/yellow_primary"
@@ -219,7 +219,7 @@
                             android:layout_weight="1"/>
 
                         <TextView
-                            android:text="MIN ATTEND."
+                            android:text="@string/attendance_minattend"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:textColor="@color/yellow_primary"
