--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -62,7 +62,7 @@
             android:focusable="true"
             android:paddingTop="10dp"
             android:paddingBottom="2dp"
-            android:text="Login"
+            android:text="@string/auth_login"
             android:textColor="@color/white_acc"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
             android:focusable="true"
             android:paddingTop="10dp"
             android:paddingBottom="2dp"
-            android:text="Register"
+            android:text="@string/auth_register"
             android:textColor="@color/white_acc"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -96,7 +96,6 @@
             android:layout_height="3dp"
             android:background="@color/yellow_acc"
             android:backgroundTint="@color/yellow_acc"
-            app:layout_constraintBottom_toTopOf="@+id/txtUsernameInput"
             app:layout_constraintEnd_toEndOf="@+id/txtRegister"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/txtRegister"
@@ -111,7 +110,7 @@
             android:ellipsize="none"
             android:ems="10"
             android:fontFamily="sans-serif"
-            android:hint="Full name"
+            android:hint="@string/auth_fullanme"
             android:includeFontPadding="false"
             android:inputType="textPersonName"
             android:paddingStart="10dp"
@@ -136,7 +135,7 @@
             android:ellipsize="none"
             android:ems="10"
             android:fontFamily="sans-serif"
-            android:hint="Username"
+            android:hint="@string/auth_hint2"
             android:inputType="textPersonName"
             android:paddingStart="10dp"
             android:textColor="@android:color/black"
@@ -160,7 +159,7 @@
             android:ellipsize="none"
             android:ems="10"
             android:fontFamily="sans-serif"
-            android:hint="LDAP e-mail address"
+            android:hint="@string/auth_hint"
             android:inputType="textPersonName"
             android:paddingStart="10dp"
             android:textColor="@android:color/black"
@@ -183,7 +182,7 @@
             android:ellipsize="none"
             android:ems="10"
             android:fontFamily="sans-serif"
-            android:hint="Password"
+            android:hint="@string/auth_hintpassword"
             android:inputType="textPassword"
             android:paddingStart="10dp"
             android:textColor="@android:color/black"
@@ -204,7 +203,7 @@
             android:layout_width="118dp"
             android:layout_height="50dp"
             android:backgroundTint="@color/yellow_acc"
-            android:text="Submit"
+            android:text="@string/auth_submit"
             android:textColor="@color/white_acc"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
