--- a/app/src/main/res/layout/fragment_ambience_otherrooms.xml
+++ b/app/src/main/res/layout/fragment_ambience_otherrooms.xml
@@ -120,7 +120,7 @@
                     android:layout_width="138dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
-                    android:text="@string/ambience_value"
+                    android:text="@string/ambience_temperature"
                     android:textColor="@color/grey_80"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
